--- a/configs/ipq60xx-6.12-nowifi.config
+++ b/configs/ipq60xx-6.12-nowifi.config
@@ -6,16 +6,16 @@ CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-unblockmusic=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
-#CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-lucky=y
 CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-tailscale=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
 CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
-#CONFIG_PACKAGE_luci-proto-bonding=y
-#CONFIG_PACKAGE_luci-proto-relay=y
+#CONFIG_PACKAGE_luci-app-istorex=y
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
+#CONFIG_PACKAGE_luci-app-sqm=y
 
 #组件调整
 CONFIG_PACKAGE_autocore=y
@@ -26,14 +26,12 @@ CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_cgdisk=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_gdisk=y
-CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=m
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_sfdisk=y
 CONFIG_PACKAGE_sgdisk=y
 CONFIG_PACKAGE_luci-lib-ipkg=n
-CONFIG_PACKAGE_luci-proto-bonding=n
-CONFIG_PACKAGE_luci-proto-relay=n
+
 
 #B大原有
 CONFIG_TARGET_qualcommax=y
@@ -101,7 +99,7 @@ CONFIG_PACKAGE_docker-compose=m
 CONFIG_PACKAGE_dockerd=m
 CONFIG_PACKAGE_etherwake=y
 # CONFIG_PACKAGE_hostapd-common is not set
-CONFIG_PACKAGE_htop=y
+
 CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_ip6tables-nft=y
 # CONFIG_PACKAGE_ipq-wifi-cmiot_ax18 is not set
@@ -225,7 +223,7 @@ CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-dockerman=m
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-app-homeproxy=n
 CONFIG_PACKAGE_luci-app-package-manager=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -237,7 +235,7 @@ CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-homeproxy-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-homeproxy-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
@@ -257,7 +255,6 @@ CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
@@ -362,3 +359,64 @@ CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
 
+# Compile来自Z大
+CONFIG_USE_APK=n
+CONFIG_DEVEL=y
+CONFIG_CCACHE=y
+CONFIG_TARGET_OPTIONS=y
+CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
+
+# BUSYBOX
+CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_BUSYBOX_CONFIG_TELNET=y
+
+# Swap
+CONFIG_PACKAGE_zram-swap=y
+
+
+# Proto
+CONFIG_PACKAGE_proto-bonding=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-proto-relay=y
+
+# Kernel modules
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-nft-queue=y
+CONFIG_PACKAGE_kmod-tls=y
+CONFIG_PACKAGE_kmod-tun=y
+
+#  USB Support
+CONFIG_PACKAGE_kmod-usb-acm=y
+CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
+CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
+CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
+CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
+
+# Libraries
+#CONFIG_PACKAGE_luci-lib-ipkg=y
+#CONFIG_PACKAGE_libopenssl-legacy=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_fuse-utils=y
+CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_qrencode=y
+CONFIG_PACKAGE_smartmontools-drivedb=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_default-settings=y
+CONFIG_PACKAGE_default-settings-chn=y
+
+#  Coremark
+CONFIG_PACKAGE_coremark=y
+CONFIG_COREMARK_OPTIMIZE_O3=y
+CONFIG_COREMARK_ENABLE_MULTITHREADING=y
+CONFIG_COREMARK_NUMBER_OF_THREADS=6
+
+#  mwan3 dependencies
+#CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
